<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>com.cacch</groupId>
    <artifactId>cacch-integration-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>cacch-integration-platform</name>
    <description>Cacch 统一企业级多系统集成中台</description>

    <modules>
        <module>cacch-integration-common</module>
        <module>cacch-integration-dao</module>
        <module>cacch-integration-service</module>
        <module>cacch-integration-manager</module>
        <module>cacch-integration-integration</module>
        <module>cacch-integration-async</module>
        <module>cacch-integration-web</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 依赖版本 -->
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <flyway.version>12.4.0</flyway.version>
        <aws-sdk.version>2.42.36</aws-sdk.version>
        <caffeine.version>3.1.8</caffeine.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <bcrypt.version>0.10.2</bcrypt.version>
        <lombok.version>1.18.36</lombok.version>
        <postgresql.version>42.7.7</postgresql.version>
        <mssql-jdbc.version>12.8.1.jre11</mssql-jdbc.version>
        <ojdbc.version>23.6.0.24.10</ojdbc.version>
        <smbj.version>0.13.0</smbj.version>
        <wemeet-openapi-sdk.version>v1.0.12</wemeet-openapi-sdk.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块 -->
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cacch</groupId>
                <artifactId>cacch-integration-async</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- Flyway -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>${flyway.version}</version>
            </dependency>

            <!-- AWS SDK BOM -->
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Caffeine -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- BCrypt -->
            <dependency>
                <groupId>at.favre.lib</groupId>
                <artifactId>bcrypt</artifactId>
                <version>${bcrypt.version}</version>
            </dependency>

            <!-- PostgreSQL JDBC Driver -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <!-- Microsoft SQL Server JDBC Driver（OA 库第二数据源，可选） -->
            <dependency>
                <groupId>com.microsoft.sqlserver</groupId>
                <artifactId>mssql-jdbc</artifactId>
                <version>${mssql-jdbc.version}</version>
            </dependency>

            <!-- Oracle JDBC Driver（致远 OA 库第二数据源） -->
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${ojdbc.version}</version>
            </dependency>

            <!-- SMB 客户端（共享盘读取） -->
            <dependency>
                <groupId>com.hierynomus</groupId>
                <artifactId>smbj</artifactId>
                <version>${smbj.version}</version>
            </dependency>

            <!-- 腾讯会议 OpenAPI SDK -->
            <dependency>
                <groupId>com.tencentcloudapi.wemeet</groupId>
                <artifactId>wemeet-openapi-sdk</artifactId>
                <version>${wemeet-openapi-sdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- 全局依赖（所有模块共用） -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
